--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
-    "monaco-editor": "^0.17.1",
+    "monaco-editor": "https://github.com/c3-georgelieu/monaco-editor.git",
     "prettier": "^1.19.1",
     "react": "^16.8.3",
     "rimraf": "^3.0.1",
@@ -55,7 +55,7 @@
     "typings-tester": "^0.3.2"
   },
   "peerDependencies": {
-    "monaco-editor": "*",
+    "monaco-editor": "https://github.com/c3-georgelieu/monaco-editor.git",
     "react": "^15.x || ^16.x"
   },
   "dependencies": {
